# openstreetlifting_backend

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-MIT  LINEAR_INTEGRATION.md  LLM_SETUP.md  README.md  docker-compose.ollama.yml  docker-compose.yaml
.github/: changelog-config.json  labels.yml
.sqlx/: query-013c759a242529b7781d1386b7284930b0537656f18e808fd068c0565832f9b9.json  query-0151e0847ffd3a5a699ef61c913f40abb6aaeea9695511178ef5b0bf36934b5f.json  query-0657f2a6d3fb71fb595b63a363ddcb3403ee92b69e15bbd031fdc4cac3505c5f.json  query-099a681f838990b8845efc001b318ba29f6c125000ce9eac8f6e548898d1d125.json  query-0f61702084c6191473b395a9f351ed64b678972f229da3bffb616575cee9bbdd.json  query-10d5cc8ea3ff17d648ceb9e9170be6baeddb97509a912c97e1a701f75af61c77.json  (+41 more)
crates/importer/: Cargo.toml  README.md
crates/importer/examples/: import_liftcontrol.rs
crates/importer/src/: error.rs  lib.rs  traits.rs
crates/importer/src/canonical/: transformer.rs  validator.rs
crates/importer/src/extractors/: html_extractor.rs  mod.rs  ollama_client.rs  preprocessor.rs  prompts.rs
crates/importer/src/sources/liftcontrol/: client.rs  exporter.rs  mod.rs  spec.rs  transformer.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: 20251108184312_init_database.sql  20251118092825_add_athlete_unique_constraint.sql
crates/storage/src/: lib.rs
crates/storage/src/dto/: competition.rs  ranking.rs
crates/storage/src/models/: athlete.rs  athlete_social.rs  attempt.rs  category.rs  competition.rs  competition_group.rs  competition_participant.rs  federation.rs  lift.rs  mod.rs  movement.rs  normalized_name.rs  record.rs  rulebook.rs  social.rs
crates/storage/src/repository/: athlete.rs  competition.rs  ranking.rs
crates/storage/src/services/: ris_computation.rs
crates/web/: Cargo.toml
crates/web/src/: config.rs  error.rs  main.rs
crates/web/src/features/athletes/: handlers.rs  mod.rs  routes.rs  services.rs
crates/web/src/features/competitions/: handlers.rs  routes.rs  services.rs
crates/web/src/features/ranking/: handlers.rs  routes.rs  services.rs
crates/web/src/features/ris/: handlers.rs  mod.rs  routes.rs  services.rs
crates/web/src/handlers/: competitions.rs  mod.rs  ranking.rs  ris.rs
crates/web/src/middleware/: auth.rs
crates/web/src/routes/: competitions.rs  mod.rs  ris.rs
docs/: book.toml
(+13 files in other folders)
