[package]
name = "web"
version = "0.1.0"
edition = "2024"

[dependencies]
storage = { path = "../storage/" }
axum = "0.7"
anyhow = "1.0.100"
dotenvy = "0.15"
rust_decimal = "1.39.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["axum"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
validator = { version = "0.18", features = ["derive"] }
